--- a/Homepage/style.css
+++ b/Homepage/style.css
@@ -20,10 +20,10 @@ nav{
 }
 
 nav img{
-    width: 150px;
-    position: absolute;
-    top: 17px;
-    left: 12%;
+    height: 200px;
+    width: 200px;
+    position: fixed;
+    top: -50px;
 }
 
 nav ul{
@@ -82,16 +82,11 @@ label #cancel{
 /* mediqueries zodat het toegankelijk word op tablet en pc*/
 @media (max-width: 1118px){
     nav img{
-        left: 8%;
+        /*logo*/
     }
 }
 
 @media (max-width: 944px){
-    nav img{
-        left: 6%;
-        top: 20px;
-        width: 130px;
-    }
     nav ul li a{
         font-size: 17px;
     }
