--- a/Homepage/style.css
+++ b/Homepage/style.css
@@ -1,7 +1,7 @@
 /*Hierin variabelen aanpassen om alle kleuren aan te passen op de site*/
 :root{
-    --main_color: #d7eaf3;
-    --secondairy_color: #4d645e;
+    --main_color: #4d645e;
+    --secondairy_color: #E0E0E0;
     --detail_color: #657672;
 }
 
@@ -15,7 +15,7 @@
 
 nav{
     height: 80px;
-    background-color: var(--secondairy_color);
+    background-color: var(--main_color);
 }
 
 .icons{
@@ -36,7 +36,7 @@ nav{
     width: 200px;
     position: fixed;
     top: -50px;
-    left: 50%;
+    left: 47%;
 }
 
 nav ul{
@@ -68,7 +68,7 @@ nav ul li a:before{
     background: white;
     transform: scaleX(0);
     transform-origin: right;
-    transition: transform .2s linear;
+    transition: transform .4s linear;
     
 }
 
@@ -144,4 +144,71 @@ label #cancel{
     .icontainer{
         margin-top: 24px;
     }
+}
+
+/* links text rechts foto*/
+body{
+    background-color: var(--secondairy_color);
+}
+
+.container{
+    position: absolute;
+    display: grid;
+    height: 92%;
+    width: 100%;
+}
+
+.left-container{
+    grid-column: 1;
+    background-color: var(--secondairy_color);
+}
+
+.right-container{
+    grid-column: 2;
+    background-color: gray;
+}
+
+.picture{
+    position: absolute;
+    height: 100%;
+    width: 50%;
+    right: 0;
+}
+
+article{
+    position: relative;
+    height: auto;
+    width: 40%;
+    top: 20%;
+    left: 5%;
+}
+
+h1{
+    text-align: left;
+    font-size: 52px;
+    color: black;
+}
+
+p{
+    font-size: 28px;
+    color: black;
+}
+
+/* button + animatie */
+button{
+    margin-top: 40px;
+    height: 80px;
+    width: 200px;
+    border-width: 5px;
+    border-color: black;
+    background-color: var(--secondairy_color);
+    color: black;
+}
+
+button:hover{
+    color: white;
+    border: none;
+    background-color: black;
+    border-radius: 10px;
+    transition: all 0.7s;
 }
