--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,18 @@
     text-decoration: none;
     margin: 0px;
     padding: 0px;
-    font-family: 'Oswald';font-size: 22px;
+    font-family: 'Oswald';
+    letter-spacing: 0.5px;
+    font-size: 22px;
 }
 
 nav{
     height: 80px;
     background-color: var(--main_color);
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 2;
 }
 
 .icons{
@@ -152,6 +158,7 @@ body{
 }
 
 .container{
+    top: 80px;
     position: absolute;
     display: grid;
     height: 92%;
@@ -218,6 +225,10 @@ button:hover{
 
 /* accesible for phone */ 
 @media (max-width: 860px){
+    .container{
+        top: 80px;
+    }
+
     .left-container{
         display: none;
     }
@@ -249,4 +260,51 @@ button:hover{
         height: 60px;
         width: 120px;
     }
+}
+
+/* about us page */
+.textcontainer{
+    position: relative;
+    top: 150px;
+    text-align: left;
+    font-size: 52px;
+    color: black;
+}
+
+.textcontainer h1{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.textcontainer p{
+    text-align: left;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    width: 70%;
+}
+
+span{
+    color: darkgreen;
+    text-decoration: none;
+    font-size: 26px;
+    font-weight: bold;
+}
+
+.groupimg{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    top: 100px;
+    position: relative;
+}
+.socials{
+    position: relative;
+    margin: auto;
+    top: 200px;
+    right: -47%;
+}
+.socialicons{
+    height: 48px;
+    width: 48px;
 }
